Working prototype that can handle keybinds with one or many buttons to activate.

--- a/WCInputHandler.vcxproj
+++ b/WCInputHandler.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="WCInputHandler.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Helpers.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
