cleanup. renamed to test so I can make a header version

--- a/WCInputHandler.vcxproj.filters
+++ b/WCInputHandler.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WCInputHandler.cpp">
+    <ClCompile Include="test_WCInputHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
