--- a/WCInputHandler.vcxproj
+++ b/WCInputHandler.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WCInputHandler.cpp" />
+    <ClCompile Include="test_WCInputHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Helpers.h" />
