Keybind class complete, skeleton for KeybindHost in cpp file (convert to header after testing)

--- a/WCInputHandler.vcxproj
+++ b/WCInputHandler.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Keybind.cpp" />
     <ClCompile Include="test_WCInputHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Helpers.h" />
+    <ClInclude Include="Keybind.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
