V1 of BindLeave plugin

--- a/dbind/dbind.vcxproj
+++ b/dbind/dbind.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="Dispatcher.h" />
     <ClInclude Include="Keybind.h" />
+    <ClInclude Include="structs.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
