--- a/dbind/dbind.vcxproj.filters
+++ b/dbind/dbind.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Dispatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="structs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
